# ML-Jet-BG-Subtraction

./: .env  .gitignore  Christine_Plot_Macro.C  Data  DecisionTree.py  ML-J-BGS copy.ipynb  ML-J-BGS.ipynb  NumericalData.pickle  Oracle_0.2_10.dot  Oracle_0.2_20.dot  Oracle_0.3_20.dot  Oracle_0.3_30.dot  README.md  generate_feature_plots.py  generate_silhouette_plots.py  info.txt  prof.txt  profile.txt  pypi_token  requirements.txt  runSuite.sh  silhouette_score.py  sillhouette_score.ipynb  the_final_script.py  train_and_evaluate.py  tree.dot
Analysis_Code/: .~lock.pbgOut.csv#  ML Working Doc.ipynb  tree.dot
Objects/: best_params_0.2_10.pickle  best_params_0.2_20_lowpt.pickle  best_params_0.2_30.pickle  best_params_0.2_30_lowpt.pickle  best_params_0.2_40_lowpt.pickle  best_params_0.3_10.pickle  best_params_0.3_30.pickle  best_params_0.3_40.pickle  best_params_0.4_10.pickle  best_params_0.4_10_lowpt.pickle  best_params_0.4_20.pickle  best_params_0.4_30.pickle  best_params_0.5_20.pickle  best_params_0.5_30_lowpt.pickle  best_params_0.5_40.pickle  best_params_0.6_10.pickle  best_params_0.6_20.pickle  rname.sh
Oracles/: OracleLowpt_0.2_10.dot  OracleLowpt_0.4_10.dot  Oracle_0.2_10.dot  Oracle_0.2_10_batch2.dot  Oracle_0.2_10_batch3.dot  Oracle_0.2_20.dot  Oracle_0.2_30.dot  Oracle_0.2_40.dot  (+16 more)
RFBDoSBC/: GetAndPrepareData.py  LICENSE  README.md  __init__.py  __main__.py  modelEvaluation.py  modelPerformance.py  modelPreparation.py  plotData.py  prof.txt  setup.cfg  summarize.py  testAll.py  utility.py
RFBDoSBC/RFBDoSBC_Steffanic.egg-info/: PKG-INFO  SOURCES.txt
(+193 files in other folders)
