[metadata]
# replace with your username:
name = RFBDoSBC_Steffanic
version = 0.0.1
url = https://github.com/Steffanic/ML-Jet-BG-Subtraction
author = Patrick Steffanic
author_email = steffaniccodes@gmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A package for exploring jet data from PYTHIA+TennGen using machine learning.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6